--- a/stick20responsedialog.ui
+++ b/stick20responsedialog.ui
@@ -51,6 +51,9 @@
        <property name="text">
         <string>LabelProgressWheell</string>
        </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
       </widget>
      </item>
      <item>
