--- a/resources.qrc
+++ b/resources.qrc
@@ -2,12 +2,11 @@
     <qresource prefix="/images">
         <file alias="CS_icon.png">images/CS_icon.png</file>
         <file alias="logo.png">images/logo.png</file>
-        <file alias="quit.ico">images/quit.ico</file>
-        <file alias="safe.ico">images/safe.ico</file>
-        <file alias="safe2.ico">images/safe2.ico</file>
-        <file alias="settings.ico">images/settings.ico</file>
-        <file alias="harddrive.ico">images/harddrive.ico</file>
-        <file alias="about.ico">images/about.ico</file>
+        <file alias="quit.png">images/quit.png</file>
+        <file alias="safe.png">images/safe.png</file>
+        <file alias="settings.png">images/settings.png</file>
+        <file alias="harddrive.png">images/harddrive.png</file>
+        <file alias="about.png">images/about.png</file>
         <file alias="ProgressWheel.GIF">images/ProgressWheel.GIF</file>
     </qresource>
 </RCC>
