--- a/securitydialog.ui
+++ b/securitydialog.ui
@@ -44,6 +44,9 @@
    <property name="text">
     <string>OK</string>
    </property>
+   <property name="default">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QCheckBox" name="ST_CheckBox">
    <property name="geometry">
