--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>718</width>
+    <width>719</width>
     <height>732</height>
    </rect>
   </property>
@@ -1366,6 +1366,12 @@
            <widget class="QPushButton" name="PWS_ButtonSaveSlot">
             <property name="text">
              <string>Save</string>
+            </property>
+            <property name="autoDefault">
+             <bool>true</bool>
+            </property>
+            <property name="default">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
