--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>719</width>
-    <height>642</height>
+    <height>686</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -110,6 +110,18 @@
               <widget class="QRadioButton" name="radioButton">
                <property name="text">
                 <string>HOTP</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLabel" name="label_25">
+               <property name="font">
+                <font>
+                 <italic>true</italic>
+                </font>
+               </property>
+               <property name="text">
+                <string>(Recommendation: Use TOPT for web applications and HOTP for local applications)</string>
                </property>
               </widget>
              </item>
@@ -408,30 +420,64 @@
             </widget>
            </item>
            <item>
+            <widget class="QCheckBox" name="enterCheckBox">
+             <property name="text">
+              <string>Send 'enter'as the last keystroke</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <layout class="QFormLayout" name="formLayout_5">
              <property name="fieldGrowthPolicy">
               <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
              </property>
-             <item row="1" column="0">
-              <widget class="QCheckBox" name="enterCheckBox">
-               <property name="text">
-                <string>Send 'enter'as the last keystroke</string>
-               </property>
-              </widget>
+             <item row="4" column="1">
+              <layout class="QVBoxLayout" name="verticalLayout_5">
+               <item>
+                <layout class="QHBoxLayout" name="horizontalLayout_7">
+                 <item>
+                  <widget class="QLineEdit" name="counterEdit">
+                   <property name="inputMask">
+                    <string/>
+                   </property>
+                   <property name="text">
+                    <string>00000000</string>
+                   </property>
+                   <property name="maxLength">
+                    <number>8</number>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QPushButton" name="setToZeroButton">
+                   <property name="text">
+                    <string>Set to zero</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QPushButton" name="setToRandomButton">
+                   <property name="text">
+                    <string>Set to random</string>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
+               </item>
+              </layout>
              </item>
-             <item row="2" column="0">
-              <widget class="QLabel" name="intervalLabel">
-               <property name="text">
-                <string>TOTP interval:</string>
+             <item row="5" column="1">
+              <spacer name="verticalSpacer_3">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
                </property>
-              </widget>
-             </item>
-             <item row="3" column="0">
-              <widget class="QLabel" name="label_5">
-               <property name="text">
-                <string>HOTP length:</string>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>20</width>
+                 <height>0</height>
+                </size>
                </property>
-              </widget>
+              </spacer>
              </item>
              <item row="3" column="1">
               <layout class="QHBoxLayout" name="horizontalLayout_8">
@@ -467,48 +513,6 @@
                </item>
               </layout>
              </item>
-             <item row="4" column="0">
-              <widget class="QLabel" name="label_6">
-               <property name="text">
-                <string>Moving factor seed:</string>
-               </property>
-              </widget>
-             </item>
-             <item row="4" column="1">
-              <layout class="QVBoxLayout" name="verticalLayout_5">
-               <item>
-                <widget class="QLineEdit" name="counterEdit">
-                 <property name="inputMask">
-                  <string/>
-                 </property>
-                 <property name="text">
-                  <string>00000000</string>
-                 </property>
-                 <property name="maxLength">
-                  <number>8</number>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <layout class="QHBoxLayout" name="horizontalLayout_7">
-                 <item>
-                  <widget class="QPushButton" name="setToZeroButton">
-                   <property name="text">
-                    <string>Set to zero</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QPushButton" name="setToRandomButton">
-                   <property name="text">
-                    <string>Set to random</string>
-                   </property>
-                  </widget>
-                 </item>
-                </layout>
-               </item>
-              </layout>
-             </item>
              <item row="2" column="1">
               <layout class="QHBoxLayout" name="horizontalLayout_15">
                <item>
@@ -532,12 +536,33 @@
                  <property name="sizeHint" stdset="0">
                   <size>
                    <width>40</width>
-                   <height>20</height>
+                   <height>0</height>
                   </size>
                  </property>
                 </spacer>
                </item>
               </layout>
+             </item>
+             <item row="4" column="0">
+              <widget class="QLabel" name="label_6">
+               <property name="text">
+                <string>Moving factor seed:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="3" column="0">
+              <widget class="QLabel" name="label_5">
+               <property name="text">
+                <string>HOTP length:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="0">
+              <widget class="QLabel" name="intervalLabel">
+               <property name="text">
+                <string>TOTP interval:</string>
+               </property>
+              </widget>
              </item>
             </layout>
            </item>
@@ -1313,11 +1338,9 @@
   <tabstop>randomSecretButton</tabstop>
   <tabstop>base32RadioButton</tabstop>
   <tabstop>hexRadioButton</tabstop>
-  <tabstop>enterCheckBox</tabstop>
   <tabstop>intervalSpinBox</tabstop>
   <tabstop>digits6radioButton</tabstop>
   <tabstop>digits8radioButton</tabstop>
-  <tabstop>counterEdit</tabstop>
   <tabstop>setToZeroButton</tabstop>
   <tabstop>setToRandomButton</tabstop>
   <tabstop>tokenIDCheckBox</tabstop>
