--- a/ui/passwordsafedialog.ui
+++ b/ui/passwordsafedialog.ui
@@ -14,7 +14,7 @@
    <string>Password safe</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="resources.qrc">
+   <iconset resource="../resources.qrc">
     <normaloff>:/images/CS_icon.png</normaloff>:/images/CS_icon.png</iconset>
   </property>
   <widget class="QPushButton" name="ButtonSendpassword">
@@ -141,7 +141,7 @@
   </widget>
  </widget>
  <resources>
-  <include location="resources.qrc"/>
+  <include location="../resources.qrc"/>
  </resources>
  <connections/>
 </ui>
