--- a/ui/stick20dialog.ui
+++ b/ui/stick20dialog.ui
@@ -14,7 +14,7 @@
    <string>Stick 2.0</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="resources.qrc">
+   <iconset resource="../resources.qrc">
     <normaloff>:/images/CS_icon.png</normaloff>:/images/CS_icon.png</iconset>
   </property>
   <widget class="QDialogButtonBox" name="buttonBox">
@@ -139,7 +139,7 @@
   </widget>
  </widget>
  <resources>
-  <include location="resources.qrc"/>
+  <include location="../resources.qrc"/>
  </resources>
  <connections>
   <connection>
