--- a/ui/stick20infodialog.ui
+++ b/ui/stick20infodialog.ui
@@ -14,7 +14,7 @@
    <string>Stick status</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="resources.qrc">
+   <iconset resource="../resources.qrc">
     <normaloff>:/images/CS_icon.png</normaloff>:/images/CS_icon.png</iconset>
   </property>
   <widget class="QLabel" name="Infotext">
@@ -60,7 +60,7 @@
   </widget>
  </widget>
  <resources>
-  <include location="resources.qrc"/>
+  <include location="../resources.qrc"/>
  </resources>
  <connections/>
 </ui>
