--- a/ui/stick20hiddenvolumedialog.ui
+++ b/ui/stick20hiddenvolumedialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>349</width>
-    <height>321</height>
+    <height>421</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -178,7 +178,7 @@
         <item row="1" column="1">
          <widget class="QLineEdit" name="HVPasswordEdit_2">
           <property name="focusPolicy">
-           <enum>Qt::TabFocus</enum>
+           <enum>Qt::ClickFocus</enum>
           </property>
           <property name="echoMode">
            <enum>QLineEdit::Password</enum>
